--- a/roles/k8s_master/tasks/kubeconfigs_generated.yml
+++ b/roles/k8s_master/tasks/kubeconfigs_generated.yml
@@ -16,10 +16,10 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in kube-controller-manager kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} --embed-certs=true --server=https://{{ k8s__advertise_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Client certificate is set in kube-controller-manager kubeconfig
-    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_controller_manager_crt.dest | basename }} --client-key={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_controller_manager_key.dest | basename }} --embed-certs=true --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_master__pki_dir }}/kube-controller-manager.crt --client-key={{ k8s_master__pki_dir }}/kube-controller-manager.key --embed-certs=true --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Context is set in kube-controller-manager kubeconfig
     command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
@@ -44,10 +44,10 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in kube-scheduler kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} --embed-certs=true --server=https://{{ k8s__advertise_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Client certificate is set in kube-scheduler kubeconfig
-    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_scheduler_crt.dest | basename }} --client-key={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_scheduler_key.dest | basename }} --embed-certs=true --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_master__pki_dir }}/kube-scheduler.crt --client-key={{ k8s_master__pki_dir }}/kube-scheduler.key --embed-certs=true --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Context is set in kube-scheduler kubeconfig
     command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
@@ -72,10 +72,10 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in admin kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} --embed-certs=true --server=https://{{ k8s__advertise_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Client certificate is set in admin kubeconfig
-    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_admin_crt.dest | basename }} --client-key={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_admin_key.dest | basename }} --embed-certs=true --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_master__pki_dir }}/admin.crt --client-key={{ k8s_master__pki_dir }}/admin.key --embed-certs=true --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Context is set in admin kubeconfig
     command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
@@ -130,7 +130,7 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in bootstrap kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} --embed-certs=true --server=https://{{ k8s__advertise_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_master__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Context is set in bootstrap kubeconfig
     command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
