--- a/roles/etcd/defaults/main.yml
+++ b/roles/etcd/defaults/main.yml
@@ -2,14 +2,16 @@ etcd__etcd_version: v3.1.12
 etcd__etcd_archive_download_url_base: https://github.com/coreos/etcd/releases/download
 etcd__etcd_archive_checksum: sha1:5a97bd2421a55bd38ae8689d195f7d93aee3ec8e
 etcd__pki_dir: /etc/kubernetes/pki
-etcd__peer_port: 2380
 
 etcd__data_dir: /var/lib/etcd
-etcd__listen_client_urls: https://{{ host__public_address }}:{{ host__etcd_server_port }}
+etcd__listen_client_urls: https://{{ host__public_address }}:{{ host__etcd_server_port }},https://127.0.0.1:{{ host__etcd_server_port }}
 etcd__advertise_client_urls: https://{{ host__public_address }}:{{ host__etcd_server_port }}
-etcd__listen_peer_urls: https://{{ host__public_address }}:{{ etcd__peer_port }}
-etcd__initial_advertise_peer_urls: https://{{ host__public_address }}:{{ etcd__peer_port }}
+etcd__listen_peer_urls: https://{{ host__public_address }}:{{ host__etcd_peer_port }}
+etcd__initial_advertise_peer_urls: https://{{ host__public_address }}:{{ host__etcd_peer_port }}
 etcd__cluster_token: '{{ k8s__k8s_cluster_name }}_8198f9e6ac'
-etcd__initial_cluster_url: https://{{ host__public_address }}:{{ etcd__peer_port }}
+etcd__initial_cluster:
+  auto_set: true
+  # auto_set: false
+  # members: {{ ansible_facts.fqdn }}=https://127.0.0.1:{{ host__etcd_peer_port }}
 etcd__max_wals: 0
 etcd__restart_sec: 10
