--- a/roles/k8s_node/tasks/certs_and_keys_installed.yml
+++ b/roles/k8s_node/tasks/certs_and_keys_installed.yml
@@ -10,29 +10,29 @@
   block:
   - name: Keys are installed
     copy:
-      src: '{{ item.dest }}'
+      src: '{{ item }}'
       dest: '{{ k8s_node__pki_dir }}'
       owner: root
       group: root
       mode: 0600
     loop:
-    - '{{ pki_tasks__fetch_kube_proxy_key }}'
+    - '{{ k8s__local_shared_dir }}/kube-proxy.key'
   - name: Certificates are installed
     copy:
-      src: '{{ item.dest }}'
+      src: '{{ item }}'
       dest: '{{ k8s_node__pki_dir }}'
       owner: root
       group: root
       mode: 0644
     loop:
-    - '{{ pki_tasks__fetch_kube_proxy_crt }}'
+    - '{{ k8s__local_shared_dir }}/kube-proxy.crt'
 
 - name: k8s CA certificates is installed
   copy:
-    src: '{{ item.dest }}'
+    src: '{{ item }}'
     dest: '{{ k8s_node__pki_dir }}'
     owner: kubernetes
     group: kubernetes
     mode: 0644
   loop:
-  - '{{ pki_tasks__fetch_k8s_ca_crt }}'
+  - '{{ k8s__local_shared_dir }}/ca.crt'
