--- a/roles/k8s_node/tasks/kubeconfigs_generated.yml
+++ b/roles/k8s_node/tasks/kubeconfigs_generated.yml
@@ -8,10 +8,10 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in kube-proxy kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} --embed-certs=true --server=https://{{ k8s__advertise_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Client certificate is set in kube-proxy kubeconfig
-    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_node__pki_dir }}/{{ pki_tasks__fetch_kube_proxy_crt.dest | basename }} --client-key={{ k8s_node__pki_dir }}/{{ pki_tasks__fetch_kube_proxy_key.dest | basename }} --embed-certs=true --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_node__pki_dir }}/kube-proxy.crt --client-key={{ k8s_node__pki_dir }}/kube-proxy.key --embed-certs=true --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Context is set in kube-proxy kubeconfig
     command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
@@ -37,7 +37,7 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in bootstrap kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} --embed-certs=true --server=https://{{ k8s__advertise_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
     when: not _stat_result.stat.exists
   - name: Context is set in bootstrap kubeconfig
     command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
