--- a/roles/k8s_node/tasks/main.yml
+++ b/roles/k8s_node/tasks/main.yml
@@ -1,3 +1,5 @@
+- import_tasks: os_tuned.yml
+  tags: os
 - import_tasks: kubernetes_user_exists.yml
   tags: users
 - import_tasks: docker_installed.yml
