--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -49,6 +49,7 @@ k8s_node__kube_proxy_bind_address: 127.0.0.1
 k8s_node__kube_proxy_enable_profiling: false
 k8s_node__kube_proxy_healthz_bind_address: 127.0.0.1:10256
 k8s_node__kube_proxy_metrics_bind_address: 127.0.0.1:10249
+k8s_node__kube_proxy_mode: iptables
 k8s_node__kube_proxy_port_range: '0-0'
 k8s_node__kube_proxy_vlog_level: 2
 k8s_node__kube_proxy_restart_sec: 10
