--- a/roles/k8s_master/tasks/tls_bootstrapping_configured.yml
+++ b/roles/k8s_master/tasks/tls_bootstrapping_configured.yml
@@ -40,6 +40,7 @@
           verbs: ['create']
     register: _apply_result
     changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
+    when: k8s__feature_gates is defined and k8s__feature_gates.RotateKubeletServerCertificate
   - include_tasks: tls_bootstrapping_configured_for_node.yml
     loop: '{{ hostvars.values() | selectattr("host__is_k8s_node") | map(attribute="ansible_facts.fqdn") | list }}'
     loop_control:
