Make parameters regarding node eviction configurable.

--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -42,9 +42,16 @@ k8s_master__kube_controller_manager_cluster_signing_duration: 8760h0m0s
 k8s_master__kube_controller_manager_controllers: '*,bootstrapsigner,tokencleaner'
 k8s_master__kube_controller_manager_enable_hostpath_provisioner: 'true'
 k8s_master__kube_controller_manager_node_cidr_mask_size: 24
+k8s_master__kube_controller_manager_node_eviction_rate: 0.1
+k8s_master__kube_controller_manager_node_monitor_grace_period: 40s
+k8s_master__kube_controller_manager_node_monitor_period: 5s
+k8s_master__kube_controller_manager_node_startup_grace_period: 1m0s
+k8s_master__kube_controller_manager_pod_eviction_timeout: 5m0s
 k8s_master__kube_controller_manager_port: 10252
 k8s_master__kube_controller_manager_profiling: 'false'
+k8s_master__kube_controller_manager_secondary_node_eviction_rate: 0.01
 k8s_master__kube_controller_manager_secure_port: 0
+k8s_master__kube_controller_manager_unhealthy_zone_threshold: 0.55
 k8s_master__kube_controller_manager_vlog_level: 2
 k8s_master__kube_controller_manager_restart_sec: 10
 
