--- a/roles/etcd/tasks/certs_and_keys_installed.yml
+++ b/roles/etcd/tasks/certs_and_keys_installed.yml
@@ -6,6 +6,14 @@
     mode: 0755
     state: directory
 
+- name: openssl config is installed
+  copy:
+    src: '{{ k8s__local_shared_dir }}/openssl.conf'
+    dest: '{{ etcd__pki_dir }}'
+    owner: root
+    group: root
+    mode: 0644
+
 - name: Keys are installed
   copy:
     src: '{{ item }}'
