--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -1,9 +1,9 @@
 k8s_master__k8s_bins_download_url_base: https://storage.googleapis.com/kubernetes-release/release/{{ k8s__k8s_version }}/bin/linux/amd64
-k8s_master__kube_apiserver_bin_checksum: sha1:1d92823bcfe71d0c694f219961276405286766be
-k8s_master__kube_controller_manager_bin_checksum: sha1:cddddf92038341053a2ac84a71ce2f147c453604
-k8s_master__kube_scheduler_bin_checksum: sha1:2a7d78c8354a38add1971dca957d28945eab10d7
-k8s_master__kubectl_bin_checksum: sha1:5a336ea470a0053b1893fda89a538b6197566137
-k8s_master__kubeadm_bin_checksum: sha1:f127dccad906ee914af8b889bb60c07f402ed025
+k8s_master__kube_apiserver_bin_checksum: sha1:d58b5cb468a104244fd0cea5fb760d553d05f414
+k8s_master__kube_controller_manager_bin_checksum: sha1:97f7f3cb2b8ec0a2e5f3a79d939d8eb39867a254
+k8s_master__kube_scheduler_bin_checksum: sha1:31ec72abc22a1565ed2f3ed12c725dd3c40b36ec
+k8s_master__kubectl_bin_checksum: sha1:5c619006fa45afce6efc51db819aff7d5ba7ef0e
+k8s_master__kubeadm_bin_checksum: sha1:c40dccc3d6fd0b7a903b0663c7ecd84f37105a2f
 
 k8s_master__pki_dir: /etc/kubernetes/pki
 k8s_master__audit_log_dir: /var/log/kubernetes
@@ -50,13 +50,18 @@ k8s_master__kube_controller_manager_pod_eviction_timeout: 5m0s
 k8s_master__kube_controller_manager_port: 10252
 k8s_master__kube_controller_manager_profiling: 'false'
 k8s_master__kube_controller_manager_secondary_node_eviction_rate: 0.01
-k8s_master__kube_controller_manager_secure_port: 0
+k8s_master__kube_controller_manager_secure_port: 10257
+k8s_master__kube_controller_manager_tls_cipher_suites: '{{ k8s_master__kube_apiserver_tls_cipher_suites }}'
+k8s_master__kube_controller_manager_tls_min_version: '{{ k8s_master__kube_apiserver_tls_min_version }}'
 k8s_master__kube_controller_manager_unhealthy_zone_threshold: 0.55
 k8s_master__kube_controller_manager_vlog_level: 2
 k8s_master__kube_controller_manager_restart_sec: 10
 
+k8s_master__kube_scheduler_bind_address: 127.0.0.1
 k8s_master__kube_scheduler_healthz_bind_address: 127.0.0.1:10251
 k8s_master__kube_scheduler_metrics_bind_address: 127.0.0.1:10247
-k8s_master__kube_scheduler_enable_profiling: false
+k8s_master__kube_scheduler_secure_port: 10259
+k8s_master__kube_scheduler_tls_cipher_suites: '{{ k8s_master__kube_apiserver_tls_cipher_suites }}'
+k8s_master__kube_scheduler_tls_min_version: '{{ k8s_master__kube_apiserver_tls_min_version }}'
 k8s_master__kube_scheduler_vlog_level: 2
 k8s_master__kube_scheduler_restart_sec: 10
