--- a/roles/pki/tasks/certs_and_keys_generated.yml
+++ b/roles/pki/tasks/certs_and_keys_generated.yml
@@ -129,67 +129,67 @@
 
 - name: kube-controller-manager client certificate
   block:
-  - name: Check if kube-controller-manager.key exists
+  - name: Check if kube-controller-manager-client.key exists
     stat:
-      path: '{{ pki__pki_dir }}/kube-controller-manager.key'
+      path: '{{ pki__pki_dir }}/kube-controller-manager-client.key'
     register: _stat_result
   - name: Private key for kube-controller-manager client certificate exists
-    command: openssl ecparam -name {{ pki__elliptic_curve_type }} -genkey -noout -out {{ pki__pki_dir }}/kube-controller-manager.key
+    command: openssl ecparam -name {{ pki__elliptic_curve_type }} -genkey -noout -out {{ pki__pki_dir }}/kube-controller-manager-client.key
     when: not _stat_result.stat.exists
   - name: kube-controller-manager client key is fetched
     fetch:
-      src: '{{ pki__pki_dir }}/kube-controller-manager.key'
+      src: '{{ pki__pki_dir }}/kube-controller-manager-client.key'
       dest: '{{ k8s__local_shared_dir }}/'
       flat: true
-  - name: Check if kube-controller-manager.pub exists
+  - name: Check if kube-controller-manager-client.pub exists
     stat:
-      path: '{{ pki__pki_dir }}/kube-controller-manager.pub'
+      path: '{{ pki__pki_dir }}/kube-controller-manager-client.pub'
     register: _stat_result
   - name: Public key for kube-controller-manager client certificate exists
-    command: openssl ec -in {{ pki__pki_dir }}/kube-controller-manager.key -outform PEM -pubout -out {{ pki__pki_dir }}/kube-controller-manager.pub
+    command: openssl ec -in {{ pki__pki_dir }}/kube-controller-manager-client.key -outform PEM -pubout -out {{ pki__pki_dir }}/kube-controller-manager-client.pub
     when: not _stat_result.stat.exists
   - name: kube-controller-manager client public key is fetched
     fetch:
-      src: '{{ pki__pki_dir }}/kube-controller-manager.pub'
+      src: '{{ pki__pki_dir }}/kube-controller-manager-client.pub'
       dest: '{{ k8s__local_shared_dir }}/'
       flat: true
-  - name: Check if kube-controller-manager.crt exists
+  - name: Check if kube-controller-manager-client.crt exists
     stat:
-      path: '{{ pki__pki_dir }}/kube-controller-manager.crt'
+      path: '{{ pki__pki_dir }}/kube-controller-manager-client.crt'
     register: _stat_result
   - name: kube-controller-manager client certificate exists
-    shell: openssl req -new -sha256 -key {{ pki__pki_dir }}/kube-controller-manager.key -subj "/CN=system:kube-controller-manager" | openssl x509 -req -sha256 -CA {{ pki__pki_dir }}/ca.crt -CAkey {{ pki__pki_dir }}/ca.key -CAcreateserial -out {{ pki__pki_dir }}/kube-controller-manager.crt -days {{ pki__kube_controller_manager_client_cert_valid_days }} -extensions v3_req_client -extfile {{ pki__pki_dir }}/openssl.conf
+    shell: openssl req -new -sha256 -key {{ pki__pki_dir }}/kube-controller-manager-client.key -subj "/CN=system:kube-controller-manager" | openssl x509 -req -sha256 -CA {{ pki__pki_dir }}/ca.crt -CAkey {{ pki__pki_dir }}/ca.key -CAcreateserial -out {{ pki__pki_dir }}/kube-controller-manager-client.crt -days {{ pki__kube_controller_manager_client_cert_valid_days }} -extensions v3_req_client -extfile {{ pki__pki_dir }}/openssl.conf
     when: not _stat_result.stat.exists
   - name: kube-controller-manager client certificate is fetched
     fetch:
-      src: '{{ pki__pki_dir }}/kube-controller-manager.crt'
+      src: '{{ pki__pki_dir }}/kube-controller-manager-client.crt'
       dest: '{{ k8s__local_shared_dir }}/'
       flat: true
 
 - name: kube-scheduler client certificate
   block:
-  - name: Check if kube-scheduler.key exists
+  - name: Check if kube-scheduler-client.key exists
     stat:
-      path: '{{ pki__pki_dir }}/kube-scheduler.key'
+      path: '{{ pki__pki_dir }}/kube-scheduler-client.key'
     register: _stat_result
   - name: Private key for kube-scheduler client certificate exists
-    command: openssl ecparam -name {{ pki__elliptic_curve_type }} -genkey -noout -out {{ pki__pki_dir }}/kube-scheduler.key
+    command: openssl ecparam -name {{ pki__elliptic_curve_type }} -genkey -noout -out {{ pki__pki_dir }}/kube-scheduler-client.key
     when: not _stat_result.stat.exists
   - name: kube-scheduler client key is fetched
     fetch:
-      src: '{{ pki__pki_dir }}/kube-scheduler.key'
+      src: '{{ pki__pki_dir }}/kube-scheduler-client.key'
       dest: '{{ k8s__local_shared_dir }}/'
       flat: true
-  - name: Check if kube-scheduler.crt exists
+  - name: Check if kube-scheduler-client.crt exists
     stat:
-      path: '{{ pki__pki_dir }}/kube-scheduler.crt'
+      path: '{{ pki__pki_dir }}/kube-scheduler-client.crt'
     register: _stat_result
   - name: kube-scheduler client certificate exists
-    shell: openssl req -new -sha256 -key {{ pki__pki_dir }}/kube-scheduler.key -subj "/CN=system:kube-scheduler" | openssl x509 -req -sha256 -CA {{ pki__pki_dir }}/ca.crt -CAkey {{ pki__pki_dir }}/ca.key -CAcreateserial -out {{ pki__pki_dir }}/kube-scheduler.crt -days {{ pki__kube_scheduler_client_cert_valid_days }} -extensions v3_req_client -extfile {{ pki__pki_dir }}/openssl.conf
+    shell: openssl req -new -sha256 -key {{ pki__pki_dir }}/kube-scheduler-client.key -subj "/CN=system:kube-scheduler" | openssl x509 -req -sha256 -CA {{ pki__pki_dir }}/ca.crt -CAkey {{ pki__pki_dir }}/ca.key -CAcreateserial -out {{ pki__pki_dir }}/kube-scheduler-client.crt -days {{ pki__kube_scheduler_client_cert_valid_days }} -extensions v3_req_client -extfile {{ pki__pki_dir }}/openssl.conf
     when: not _stat_result.stat.exists
   - name: kube-scheduler client certificate is fetched
     fetch:
-      src: '{{ pki__pki_dir }}/kube-scheduler.crt'
+      src: '{{ pki__pki_dir }}/kube-scheduler-client.crt'
       dest: '{{ k8s__local_shared_dir }}/'
       flat: true
 
@@ -381,6 +381,16 @@
       src: '{{ pki__pki_dir }}/kube-proxy.crt'
       dest: '{{ k8s__local_shared_dir }}/'
       flat: true
+
+- include_tasks: certs_and_keys_for_kube_controller_manager_generated.yml
+  loop: '{{ hostvars.values() | selectattr("host__is_k8s_master") | map(attribute="ansible_facts.fqdn") | list }}'
+  loop_control:
+    loop_var: _hostname
+
+- include_tasks: certs_and_keys_for_kube_scheduler_generated.yml
+  loop: '{{ hostvars.values() | selectattr("host__is_k8s_master") | map(attribute="ansible_facts.fqdn") | list }}'
+  loop_control:
+    loop_var: _hostname
 
 - include_tasks: certs_and_keys_for_kubelets_generated.yml
   loop: '{{ hostvars.values() | selectattr("host__is_k8s_node") | map(attribute="ansible_facts.fqdn") | list }}'
