--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -56,6 +56,7 @@ k8s_master__kube_controller_manager_tls_min_version: '{{ k8s_master__kube_apiser
 k8s_master__kube_controller_manager_unhealthy_zone_threshold: 0.55
 k8s_master__kube_controller_manager_vlog_level: 2
 k8s_master__kube_controller_manager_restart_sec: 10
+k8s_master__kube_controller_manager_use_auto_generated_serving_cert: false
 
 k8s_master__kube_scheduler_bind_address: 127.0.0.1
 k8s_master__kube_scheduler_healthz_bind_address: 127.0.0.1:10251
@@ -65,3 +66,4 @@ k8s_master__kube_scheduler_tls_cipher_suites: '{{ k8s_master__kube_apiserver_tls
 k8s_master__kube_scheduler_tls_min_version: '{{ k8s_master__kube_apiserver_tls_min_version }}'
 k8s_master__kube_scheduler_vlog_level: 2
 k8s_master__kube_scheduler_restart_sec: 10
+k8s_master__kube_scheduler_use_auto_generated_serving_cert: false
