--- a/roles/pki/tasks/certs_and_keys_generated.yml
+++ b/roles/pki/tasks/certs_and_keys_generated.yml
@@ -386,11 +386,13 @@
   loop: '{{ hostvars.values() | selectattr("host__is_k8s_master") | map(attribute="ansible_facts.fqdn") | list }}'
   loop_control:
     loop_var: _hostname
+  when: not k8s_master__kube_controller_manager_use_auto_generated_serving_cert
 
 - include_tasks: certs_and_keys_for_kube_scheduler_generated.yml
   loop: '{{ hostvars.values() | selectattr("host__is_k8s_master") | map(attribute="ansible_facts.fqdn") | list }}'
   loop_control:
     loop_var: _hostname
+  when: not k8s_master__kube_scheduler_use_auto_generated_serving_cert
 
 - include_tasks: certs_and_keys_for_kubelets_generated.yml
   loop: '{{ hostvars.values() | selectattr("host__is_k8s_node") | map(attribute="ansible_facts.fqdn") | list }}'
